video/ovenplayer/ingress-wildcard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ovenplayer
spec:
  ingressClassName: nginx
  tls:
  - secretName: AUTOMATIC_REPLACE
  rules:
  - host: ovenplayer.AUTOMATIC_REPLACE
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ovenplayerdemo
            port:
              name: http
